The third change in final project web CSY1018

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   	<link rel="icon" href="image/fab.png" type="image/gif" sizes="16x16">
     <title>ADITYA MEDIA</title>
-    <link rel="stylesheet" href="indexstyle.css">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,7 +20,7 @@
 
     <ul class="card">
       <a href="index.html"> Landing</a> 
-      <a href="reviews.html"> Reviews</a> 
+      <a href="review.html"> Reviews</a> 
       <a href="glossary.html"> Glossary</a> 
       <a href="jobs.html"> Jobs</a> 
       <a href="tutorial.html"> Tutorials</a>
@@ -161,7 +161,7 @@
     <b>Aditya Media</b>
     <p class="title">
       <a href="index.html"> Landing</a> 
-      <a href="reviews.html"> Reviews</a> 
+      <a href="review.html"> Reviews</a> 
       <a href="glossary.html"> Glossary</a> 
       <a href="jobs.html"> Jobs</a> 
       <a href="tutorial.html"> Tutorials</a>
