semi-final project edit

--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
 
 
   
+  <div class="ads">
+  <h1>Up to 50% OFF</h1>
+  <h2>Only in Manish Software Co.</h2>
+  <a href="#">Show More</a>
+  </div>
 
   <footer class="bottom">
   <div class="bottom-forward">
