--- a/tutorial.html
+++ b/tutorial.html
@@ -60,10 +60,10 @@
           <a href="#" class="paper">
             <article>
               <div class="iframe-pot">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/br-0i3U1VCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fqNPSSoMO9Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-              <h1>Making Modern Layouts with CSS Grid | CSS Grid Basics</h1>
-              <p>CSS Grid Layout is the most powerful layout system available in CSS. In this video, we will cover the basics of CSS Grid including some basic terminology and some easy syntax to get you up and running with Grid in your project today</p>
+              <h1>Learn Flex-box layout in 15 minutes | CSS Flex Basics tutorial</h1>
+              <p>Understanding Flex basics in CSS3 from scratch | A quick guide to  Display Flex with styling container and items with flex-direction, flex-wrap, flex-basis, flex-shrink and flex-grow.</p>
             </article>
           </a>
     </div>
@@ -71,63 +71,25 @@
       <a href="#" class="paper">
             <article>
               <div class="iframe-pot">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/br-0i3U1VCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/R7gqJkdc5dM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-              <h1>Making Modern Layouts with CSS Grid | CSS Grid Basics</h1>
-              <p>CSS Grid Layout is the most powerful layout system available in CSS. In this video, we will cover the basics of CSS Grid including some basic terminology and some easy syntax to get you up and running with Grid in your project today</p>
+              <h1>Floats, Flexbox, Grid? The progression of CSS layouts</h1>
+              <p>CSS is confusing enough, and now in 2018 there are so many different options out there, from floats to flexbox to CSS Grid. This video takes a look at why we used floats for layout, and how things have progressed to flexbox, and now to grid to give a bit of a historical look at it all, as well as some ideas about what you should be using today.</p>
             </article>
           </a>
     </div>
-    <div class="fourth">
-          <a href="#" class="paper">
-            <article>
-              <div class="iframe-pot">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/br-0i3U1VCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <h1>Making Modern Layouts with CSS Grid | CSS Grid Basics</h1>
-              <p>CSS Grid Layout is the most powerful layout system available in CSS. In this video, we will cover the basics of CSS Grid including some basic terminology and some easy syntax to get you up and running with Grid in your project today</p>
-            </article>
-          </a>
-    </div>
-    <div class="fifth">
-          <a href="#" class="paper">
-            <article>
-              <div class="iframe-pot">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/br-0i3U1VCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <h1>Making Modern Layouts with CSS Grid | CSS Grid Basics</h1>
-              <p>CSS Grid Layout is the most powerful layout system available in CSS. In this video, we will cover the basics of CSS Grid including some basic terminology and some easy syntax to get you up and running with Grid in your project today</p>
-            </article>
-          </a>
-    </div>
-    <div class="sixth">
-      <a href="#" class="paper">
-            <article>
-              <div class="iframe-pot">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/br-0i3U1VCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <h1>Making Modern Layouts with CSS Grid | CSS Grid Basics</h1>
-              <p>CSS Grid Layout is the most powerful layout system available in CSS. In this video, we will cover the basics of CSS Grid including some basic terminology and some easy syntax to get you up and running with Grid in your project today</p>
-            </article>
-          </a>
-    </div>
-    <div class="seventh">
-      <a href="#" class="paper">
-            <article>
-              <div class="iframe-pot">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/br-0i3U1VCA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              </div>
-              <h1>Making Modern Layouts with CSS Grid | CSS Grid Basics</h1>
-              <p>CSS Grid Layout is the most powerful layout system available in CSS. In this video, we will cover the basics of CSS Grid including some basic terminology and some easy syntax to get you up and running with Grid in your project today</p>
-            </article>
-          </a>
-    </div>
-  </div>
 
-  </body>
+
+</div>
+</body>
 
 
   
+  <div class="ads">
+  <h1>Up to 50% OFF</h1>
+  <h2>Only in Manish Software Co.</h2>
+  <a href="#">Show More</a>
+  </div>
 
   <footer class="bottom">
   <div class="bottom-forward">
